@@ -7,6 +7,7 @@
 4. Scale grid icons by grid size.
 5. If viewing images from browse then allow to swiping left/right to view
    prev/next images.
+6. Add button, shown on hover, to view images.
 
 5.4.3
 -----
